[package]

name = "errno"
version = "0.3.14"
authors = ["Chris Wong <lambda.fairy@gmail.com>", "Dan Gohman <dev@sunfishcode.online>"]

license = "MIT OR Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/errno"
repository = "https://github.com/lambda-fairy/rust-errno"
description = "Cross-platform interface to the `errno` variable."
categories = ["no-std", "os"]
rust-version = "1.56"

[target.'cfg(any(unix, target_os="wasi", target_os="hermit"))'.dependencies]
libc = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = ["libc/std"]

# TODO: Remove this exemption when Cygwin support lands in Rust stable
# https://github.com/rust-lang/rust/pull/134999
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("cygwin"))']
